images and svg prepared, global styles implimented

--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: "Roboto Slab";
+  font-family: "SF-UI-DisplayBold";
   src: url("../fonts/SF-UI-DisplayRegular.woff") format("woff");
   font-style: normal;
   font-weight: 400;
@@ -7,7 +7,7 @@
 }
 
 @font-face {
-  font-family: "Roboto Slab";
+  font-family: "SF-UI-DisplayBold";
   src: url("../fonts/SF-UI-DisplayBold.woff") format("woff");
   font-style: normal;
   font-weight: 700;
