--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,11 +1,12 @@
 // widths
-$mobile-width: 375px;
+$mobile-width: 320px;
 
 //colors
 $main-black: #131313;
 $main-red: #EE3D48;
 $main-background: #FAFAFA;
 $white: #FFFFFF;
+$black: #000000;
 $border-gray: #EBEBEB;
 $text-grey: #939598;
 $rent-time-grey: #F1F2F2;
@@ -16,7 +17,7 @@ $close-button-color: rgba(255, 255, 255, 0.5);
 $select-background: #F5F5F5;
 
 //font-family
-$font-primary: "Work Sans",
+$font-primary: "SF-UI-DisplayBold",
 "Arial",
 sans-serif;
 
