--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -5,6 +5,7 @@ html {
 body {
   font-family: $font-primary;
   box-sizing: border-box;
+  background-color: $black;
 }
 
 img {
@@ -23,17 +24,17 @@ ul {
 }
 
 a {
-  display: flex;
-
-  width: 100%;
-  height: 100%;
-
-  text-decoration: none;
-
-  color: inherit;
-
-  justify-content: center;
-  align-items: center;
+  //display: flex;
+  //
+  //width: 100%;
+  //height: 100%;
+  //
+  //text-decoration: none;
+  //
+  //color: inherit;
+  //
+  //justify-content: center;
+  //align-items: center;
 }
 
 .body-container {
@@ -41,9 +42,10 @@ a {
   flex-direction: column;
 
   align-items: center;
-  color: $main-black;
+  color: $white;
 
   margin: 0 auto;
+  max-width: 320px;
 }
 
 .container {
