--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,6 +2,7 @@
 @import "variables.scss";
 @import "fonts.scss";
 @import "global.scss";
+@import "components/button.scss";
 @import "blocks/main-header.scss";
 @import "blocks/main-body.scss";
 @import "blocks/main-footer.scss";
