--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -1,2 +1,28 @@
 .main-header {
+  min-height: 41px;
+  padding: 0 23px;
+  padding-top: 10px;
+  margin-bottom: 20px;
+  display: flex;
+}
+
+.main-header__logo {
+  margin-right: auto;
+}
+
+.main-header__navigation {
+  display: none;
+}
+
+.main-header__controls-wrapper {
+  display: flex;
+  align-items: center;
+  margin-right: 30px;
+}
+
+.main-header__nav-button {
+  font-size: 0;
+  background-color: red;
+  width: 40px;
+  height: 40px;
 }
