--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -24,17 +24,17 @@ ul {
 }
 
 a {
-  //display: flex;
-  //
-  //width: 100%;
-  //height: 100%;
-  //
-  //text-decoration: none;
-  //
-  //color: inherit;
-  //
-  //justify-content: center;
-  //align-items: center;
+  display: flex;
+
+  width: 100%;
+  height: 100%;
+
+  text-decoration: none;
+
+  color: inherit;
+
+  justify-content: center;
+  align-items: center;
 }
 
 .body-container {
