intro block mobile halfway done

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,4 +5,5 @@
 @import "components/button.scss";
 @import "blocks/main-header.scss";
 @import "blocks/main-body.scss";
+@import "blocks/intro-block.scss";
 @import "blocks/main-footer.scss";
