--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -2,9 +2,7 @@
 $mobile-width: 320px;
 
 //colors
-$main-black: #131313;
-$main-red: #EE3D48;
-$main-background: #FAFAFA;
+$main-orange: #FF970A;
 $white: #FFFFFF;
 $black: #000000;
 $border-gray: #EBEBEB;
@@ -15,6 +13,7 @@ $footer-border-grey: #D5DAE0;
 $slider-button-background: rgba(0, 0, 0, 0.24);
 $close-button-color: rgba(255, 255, 255, 0.5);
 $select-background: #F5F5F5;
+$intro-link-background: linear-gradient(124.94deg, #000000 -120.88%, rgba(155, 155, 155, 0) 127.52%);
 
 //font-family
 $font-primary: "SF-UI-DisplayBold",
