--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -13,3 +13,11 @@
   font-weight: 700;
   font-display: swap;
 }
+
+@font-face {
+  font-family: "SF-UI-DisplayBold";
+  src: url("../fonts/SF-UI-DisplaySemibold.woff") format("woff");
+  font-style: normal;
+  font-weight: 600;
+  font-display: swap;
+}
