--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,4 +6,5 @@
 @import "blocks/main-header.scss";
 @import "blocks/main-body.scss";
 @import "blocks/intro-block.scss";
+@import "blocks/statistics.scss";
 @import "blocks/main-footer.scss";
