--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -4,12 +4,22 @@
   padding-top: 10px;
   margin-bottom: 20px;
   display: flex;
-}
+    }
 
 .main-header__logo {
   justify-content: flex-start;
   width: auto;
   margin-right: auto;
+  transition-duration: 0.3s;
+
+  &:hover,
+  &:focus {
+    transform: scale(1.1);
+  }
+
+  &:active {
+    transform: scale(0.9);
+  }
 }
 
 .main-header__navigation {
